[tool.poetry]
name = "metr"
version = "0.1.0"
description = ""
authors = ["Gorilla <hello@gorilla.co>"]

[tool.poetry.dependencies]
python = "^3.11"

aws-lambda-typing = "^2.13"
SQLAlchemy = "^2.0.21"

[tool.poetry.dev-dependencies]
black = "^22.6"
coverage = "^6.1"
flake8 = "^4.0"
isort = "^5.10"
mypy = "^1.5.1"
pytest = "^7.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
